welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:4: error: ';' expected but integer literal found.
	else if (speed)<= 80 return 1
                          ^